--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -52,18 +52,59 @@ body {
 
 .main-bottom {
   width: 100%;
-  background-color: red;
 }
 .main-bottom ul {
   list-style-type: none;
 }
 .main-bottom li {
   border: 1px solid black;
+  background-color: rgb(55, 82, 82);
   padding: 0.5rem;
+  padding-left: 2.5rem;
   text-transform: capitalize;
   font-size: 1.3rem;
   color: white;
   font-weight: 700;
+  position: relative;
+  user-select: none;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+  cursor: pointer;
+}
+.main-bottom li .fa-trash {
+  position: absolute;
+  right: 10px;
+  display: none;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+.main-bottom li .fa-trash:hover {
+  color: red;
+}
+.main-bottom li:hover .fa-trash {
+  display: inline-block;
+}
+.main-bottom .done {
+  text-decoration: line-through;
+  background-color: green;
+}
+.main-bottom .done::before {
+  content: "";
+  display: inline-block;
+  width: 9px;
+  height: 22px;
+  position: absolute;
+  left: 11px;
+  border-width: 0 4px 4px 0;
+  border-style: solid;
+  transform: rotate(45deg);
+  bottom: 8px;
 }
 
 /*# sourceMappingURL=style.css.map */
